--- a/templates/index.html
+++ b/templates/index.html
@@ -79,7 +79,7 @@
     <div class="upload-container">
         <form method="post" enctype="multipart/form-data">
             <div class="file-input-wrapper">
-                <button class="btn">Choose an image</button>
+                <button class="btn">Choose an image of the C32 component</button>
                 <input type="file" name="image" accept="image/*" id="file-input">
             </div>
             <div id="file-name"></div>
